[gd_scene load_steps=7 format=2]

[ext_resource path="res://Media/FixedDays Font/new_dynamicfontdata.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Media/FixedDays Font/Text_Default.tres" type="DynamicFont" id=2]
[ext_resource path="res://Src/Bootstrap/GameInit/Submenues/BootMode.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0980392, 0.901961, 0.862745, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 1 )

[node name="Node" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = 304.0
margin_top = 160.0
margin_right = 976.0
margin_bottom = 480.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 64.0
margin_top = 336.0
margin_right = 272.0
margin_bottom = 392.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 312.0
margin_top = 176.0
margin_right = 880.0
margin_bottom = 216.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_text = "Press a Button to set a Mode to boot:"
text = "Press a Button to set a Mode to boot:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boot1" type="Control" parent="Control"]
<<<<<<< HEAD
margin_top = -16.0
margin_right = 40.0
margin_bottom = 24.0
=======
margin_right = 40.0
margin_bottom = 40.0
>>>>>>> 14ed4bc523602584d0fecdfce3fc61f9ee8a2684
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control/boot1"]
margin_left = 320.0
margin_top = 240.0
margin_right = 496.0
margin_bottom = 272.0
text = "Rest-mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boot3" type="Control" parent="Control"]
<<<<<<< HEAD
margin_top = 24.0
margin_right = 40.0
margin_bottom = 64.0
=======
margin_top = 40.0
margin_right = 40.0
margin_bottom = 80.0
>>>>>>> 14ed4bc523602584d0fecdfce3fc61f9ee8a2684
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control/boot3"]
margin_left = 320.0
margin_top = 240.0
margin_right = 496.0
margin_bottom = 272.0
text = "Panic-mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boot2" type="Control" parent="Control"]
<<<<<<< HEAD
margin_left = 416.0
margin_top = -16.0
margin_right = 456.0
margin_bottom = 24.0
=======
margin_top = 96.0
margin_right = 40.0
margin_bottom = 136.0
>>>>>>> 14ed4bc523602584d0fecdfce3fc61f9ee8a2684
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control/boot2"]
margin_left = 320.0
margin_top = 240.0
margin_right = 496.0
margin_bottom = 272.0
text = "Statistics"

<<<<<<< HEAD
[node name="boot5" type="Control" parent="Control"]
margin_left = 208.0
margin_top = -16.0
margin_right = 248.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control/boot5"]
margin_left = 320.0
margin_top = 240.0
margin_right = 496.0
margin_bottom = 272.0
text = "Experimental"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boot4" type="Control" parent="Control"]
margin_left = 208.0
margin_top = 24.0
margin_right = 248.0
margin_bottom = 64.0
=======
[node name="boot4" type="Control" parent="Control"]
margin_top = 152.0
margin_right = 40.0
margin_bottom = 192.0
>>>>>>> 14ed4bc523602584d0fecdfce3fc61f9ee8a2684
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control/boot4"]
margin_left = 320.0
margin_top = 240.0
margin_right = 424.0
margin_bottom = 272.0
text = "Tilemap test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="details" type="Button" parent="Control/boot4"]
margin_left = 432.0
margin_top = 240.0
margin_right = 496.0
margin_bottom = 272.0
text = "details"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="detail" type="Control" parent="."]
visible = false
margin_left = 552.0
margin_top = 56.0
margin_right = 592.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="detail"]
margin_right = 424.0
margin_bottom = 88.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="detail"]
margin_left = -8.0
margin_right = 560.0
margin_bottom = 40.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=yellow] Details"
text = " Details"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="detail"]
margin_left = 16.0
margin_top = 40.0
margin_right = 416.0
margin_bottom = 80.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/boot1/Button" to="." method="_on_Restmode_pressed"]
[connection signal="pressed" from="Control/boot3/Button" to="." method="_on_Quickstart_pressed"]
[connection signal="pressed" from="Control/boot2/Button" to="." method="_on_Statistics_pressed"]
<<<<<<< HEAD
[connection signal="pressed" from="Control/boot5/Button" to="." method="_on_Experimental_pressed"]
=======
>>>>>>> 14ed4bc523602584d0fecdfce3fc61f9ee8a2684
[connection signal="pressed" from="Control/boot4/Button" to="." method="_on_Tilemap_pressed"]
[connection signal="pressed" from="Control/boot4/details" to="." method="_on_tilemap_details_pressed"]
